<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_test</name>
  <version>0.8.0</version>
  <description>Examples of minimal publisher nodes</description>
  <maintainer email="abepadalkar@gmail.com">Abhishek Padalkar</maintainer>
  <license>Apache License 2.0</license>
  <author>Abhishek Padalkar</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

